# ChromaCode

./: .gitignore  CODE_STYLE.md  LICENSE  README.md  README.zh-CN.md  requirements.txt
.github/workflows/: ci.yml
code/: iq_sensing_system.py  make_figures.py  spectral_reconstruction.py
config/: default_10ch.json  example_config.yaml
cpp/: CMakeLists.txt  README.md  chromacode.hpp  demo.cpp
cpp/data/: sample_signal.csv
cpp/src/: demo.cpp
docs/: mathematical_theory.md  system_documentation.md
examples/: example_usage.py
python/: iq_sensing_system.py  make_figures.py  requirements.txt
python/examples/: example_usage.py
python/tests/: test_reconstruction.py
tests/: test_reconstruction.py
