cmake_minimum_required(VERSION 3.16)
project(chromacode_cpp CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

find_package(Armadillo REQUIRED)

add_executable(chromacode_demo demo.cpp)
target_include_directories(chromacode_demo PRIVATE ${ARMADILLO_INCLUDE_DIRS})
target_link_libraries(chromacode_demo PRIVATE ${ARMADILLO_LIBRARIES})
